[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Soldier.png" type="Texture" id=1]
[ext_resource path="res://Assets/Audio/shots.wav" type="AudioStream" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/walk.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Soldier_1.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 509, 311 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -18, -6 )
rotation = 3.14159
scale = Vector2( 2.47721, 2.59191 )
frames = SubResource( 1 )
frame = 1
flip_v = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 2, 2 )
scale = Vector2( 0.768601, 0.665761 )
polygon = PoolVector2Array( 18.2148, 3.00409, 10.4084, 18.0245, -15.6128, 15.0204, -18.215, 0, -13.0107, -15.0204, 13.0106, -15.0204 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1, 1 )
collision_layer = 15
collision_mask = 15

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 2, 3.99999 )
scale = Vector2( 1.38587, 1.30931 )
polygon = PoolVector2Array( -9.38037, -11.4564, 7.93726, -11.4564, 10.8235, -0.763763, 7.93726, 6.87384, -7.93719, 6.87384, -12.2667, 3.81882, -12.2667, -2.29129 )

[node name="Engine" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.731

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Player_Shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.361
one_shot = true

[connection signal="finished" from="Engine" to="." method="_on_Engine_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
